--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -441,6 +441,9 @@ if(${USE_DPDK})
     src/agora/txrx/workers/txrx_worker_dpdk.cc)
 endif()
 
+find_package(CUDAToolkit REQUIRED)
+enable_language(CUDA)
+#set_source_files_properties(src/agora/dofft.cc PROPERTIES LANGUAGE CUDA)
 set(AGORA_SOURCES ${AGORA_SOURCES}
   ${PUREUHD_SOURCES_AGORA}
   src/agora/agora.cc
@@ -475,7 +478,7 @@ set(CLIENT_SOURCES
   src/mac/mac_thread_client.cc)
 add_library(client_sources_lib OBJECT ${CLIENT_SOURCES})
 
-set(COMMON_LIBS -Wl,--start-group ${MKL_LIBS} ${BLAS_LIBRARIES} -Wl,--end-group ${NUMA_LIBRARIES} ${FLEXRAN_LDPC_LIBS} ${HDF5_LIBRARIES} ${DPDK_LIBRARIES} ${ARMADILLO_LIBRARIES} ${SOAPY_LIB}
+set(COMMON_LIBS cufft cudart -Wl,--start-group ${MKL_LIBS} ${BLAS_LIBRARIES} -Wl,--end-group ${NUMA_LIBRARIES} ${FLEXRAN_LDPC_LIBS} ${HDF5_LIBRARIES} ${DPDK_LIBRARIES} ${ARMADILLO_LIBRARIES} ${SOAPY_LIB}
     ${PYTHON_LIB} ${Boost_LIBRARIES} ${GFLAGS_LIBRARIES} ${UHD_LIBRARIES} ${COMMON_LIBS})
 message(VERBOSE "Common libs: ${COMMON_LIBS}")
 
