--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -441,15 +441,24 @@ if(${USE_DPDK})
     src/agora/txrx/workers/txrx_worker_dpdk.cc)
 endif()
 
-find_package(CUDAToolkit REQUIRED)
+set(CUDAToolkit_ROOT /usr/local/cuda)
+set(CUDA_TOOLKIT_ROOT_DIR /usr/local/cuda)
+set(CUDA_VERSION 12.2)
+set(CMAKE_CUDA_COMPILER /usr/local/cuda/bin/nvcc)
+#find_package(CUDAToolkit REQUIRED 12.2)
+#find_package(CUDA REQUIRED 12.2)
 enable_language(CUDA)
+set(CMAKE_CUDA_STANDARD 17)
 #set_source_files_properties(src/agora/dofft.cc PROPERTIES LANGUAGE CUDA)
+set(CMAKE_CUDA_SEPARABLE_COMPILATION ON)
+set(CMAKE_CUDA_ARCHITECTURES native)
 set(AGORA_SOURCES ${AGORA_SOURCES}
   ${PUREUHD_SOURCES_AGORA}
   src/agora/agora.cc
   src/agora/agora_buffer.cc
   src/agora/agora_worker.cc
-  src/agora/dofft.cc
+  src/agora/dofft.cu
+  src/agora/doFFTCallback.cu
   src/agora/doifft.cc
   src/agora/dobeamweights.cc
   src/agora/dodemul.cc
@@ -478,7 +487,7 @@ set(CLIENT_SOURCES
   src/mac/mac_thread_client.cc)
 add_library(client_sources_lib OBJECT ${CLIENT_SOURCES})
 
-set(COMMON_LIBS cufft cudart -Wl,--start-group ${MKL_LIBS} ${BLAS_LIBRARIES} -Wl,--end-group ${NUMA_LIBRARIES} ${FLEXRAN_LDPC_LIBS} ${HDF5_LIBRARIES} ${DPDK_LIBRARIES} ${ARMADILLO_LIBRARIES} ${SOAPY_LIB}
+set(COMMON_LIBS cufft_static culibos -Wl,--start-group ${MKL_LIBS} ${BLAS_LIBRARIES} -Wl,--end-group ${NUMA_LIBRARIES} ${FLEXRAN_LDPC_LIBS} ${HDF5_LIBRARIES} ${DPDK_LIBRARIES} ${ARMADILLO_LIBRARIES} ${SOAPY_LIB}
     ${PYTHON_LIB} ${Boost_LIBRARIES} ${GFLAGS_LIBRARIES} ${UHD_LIBRARIES} ${COMMON_LIBS})
 message(VERBOSE "Common libs: ${COMMON_LIBS}")
 
